--- a/index.html
+++ b/index.html
@@ -1,6 +1,36 @@
 <!DOCTYPE html>
-
 <html>
-    
 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Le Mans Elite</title>
+    <link rel="stylesheet" href="./style/header.css">
+    <link rel="stylesheet" href="./style/style.css">
+</head>
+
+<body>
+
+    <header>
+        <div class="header-container">
+            <div class="logo-title">
+                <img src="./img/logo.png" alt="Le Mans Elite Logo" class="logo">
+                <h1>Le Mans Elite Taekwondo</h1>
+            </div>
+            <nav>
+                <ul class="nav-links">
+                    <li><a href="./index.html">Accueil</a></li>
+                    <li><a href="./html/club.html">Le club</a></li>
+                    <li><a href="./html/equipes.html">Les équipes/Sections</a></li>
+                    <li><a href="./html/horaires.html">Les Horaires & Lieux</a></li>
+                    <li><a href="./html/actualites.html">Actualités</a></li>
+                    <li><a href="./html/inscriptions.html">Inscriptions</a></li>
+                    <li><a href="./html/contact.html">Contact</a></li>
+                    <li><a href="./html/avis.html">Avis sur les événements</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
+</body>
 </html>
