--- a/index.html
+++ b/index.html
@@ -7,9 +7,13 @@
     <title>Le Mans Elite</title>
     <link rel="stylesheet" href="./style/header.css">
     <link rel="stylesheet" href="./style/style.css">
+    <link rel="stylesheet" href="./style/scrollbar.css">
+    <link rel="icon" href="./img/logo.png" type="image/x-icon">
 </head>
 
 <body>
+
+<!-- Header  -->
 
     <header>
         <div class="header-container">
@@ -26,11 +30,22 @@
                     <li><a href="./html/actualites.html">Actualités</a></li>
                     <li><a href="./html/inscriptions.html">Inscriptions</a></li>
                     <li><a href="./html/contact.html">Contact</a></li>
-                    <li><a href="./html/avis.html">Avis sur les événements</a></li>
                 </ul>
             </nav>
         </div>
     </header>
+
+<!-- Main  -->
+
+<main>
+    <div class="hero">
+        <div class="hero-container">
+            <h2>Bienvenue sur le site de Le Mans Elite Taekwondo</h2>
+            <p>Découvrez notre club, nos équipes et toutes les informations nécessaires pour rejoindre notre passionnante aventure.</p>
+            <!-- <a href="./html/inscriptions.html" class="cta-button">Rejoignez-nous</a> -->
+        </div>
+    </div>
+</main>
 
 </body>
 </html>
