--- a/index.html
+++ b/index.html
@@ -5,9 +5,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Le Mans Elite</title>
+
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com"> 
+    <link rel="preconnect" href="https://fonts.gstatic.com"  crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=PT+Sans+Narrow:wght@400;700&family=Savate:ital,wght@0,200..900;1,200..900&family=WDXL+Lubrifont+JP+N&display=swap" rel="stylesheet">
+
+    <!-- Styles CSS -->
+    <link rel="stylesheet" href="./style/color.css">
     <link rel="stylesheet" href="./style/header.css">
+    <link rel="stylesheet" href="./style/footer.css">
     <link rel="stylesheet" href="./style/style.css">
     <link rel="stylesheet" href="./style/scrollbar.css">
+
+    <!-- Favicon -->
     <link rel="icon" href="./img/logo.png" type="image/x-icon">
 </head>
 
@@ -37,15 +48,150 @@
 
 <!-- Main  -->
 
-<main>
-    <div class="hero">
-        <div class="hero-container">
-            <h2>Bienvenue sur le site de Le Mans Elite Taekwondo</h2>
-            <p>Découvrez notre club, nos équipes et toutes les informations nécessaires pour rejoindre notre passionnante aventure.</p>
-            <!-- <a href="./html/inscriptions.html" class="cta-button">Rejoignez-nous</a> -->
+    <main>
+        <div class="hero fade-in">
+            <div class="hero-container">
+                <h2>Bienvenue sur le site de Le Mans Elite Taekwondo</h2>
+                <p>Découvrez notre club, nos équipes et toutes les informations nécessaires pour rejoindre notre passionnante aventure.</p>
+                <!-- <a href="./html/inscriptions.html" class="cta-button">Rejoignez-nous</a> -->
+            </div>
         </div>
-    </div>
-</main>
+    </main>
+
+<!-- Section  -->
+
+    <section class="presentation fade-in">
+        <div class="presentation-container">
+            <h3>Présentation</h3>
+            <p>
+                Le Mans Elite Taekwondo est un club ouvert à tous, situé au cœur du Mans.
+                Nous accueillons enfants, adolescents et adultes dans une ambiance conviviale. 
+                Nos entraînements sont encadrés par des coachs diplômés et passionnés. 
+            </p><br><br>
+
+            <h4>Valeurs du club</h3>
+
+            <div class="valeurs">
+                <div class="valeur-item">
+                    <p>Respect</p>
+                </div>
+                <div class="valeur-item">
+                    <p>Rigueur</p>
+                </div>
+                <div class="valeur-item">
+                    <p>Dépassement</p>
+                </div>
+            </div>
+
+            <a href="./html/club.html" class="cta-button">En savoir plus sur le club</a>
+        </div>
+    </section>
+
+<!-- Section Album -->
+
+    <section class="album fade-in">
+        <div class="album-container">
+            <h3>Notre Album</h3>
+            <p>Découvrez les moments forts</p>
+            <div class="album-grid">
+                <div class="item-1">
+                    <img src="./img/Album/actu-rec-1-2.jpg" alt="Album Image 1">
+                </div>
+
+                <div class="item-2">
+                    <img src="./img/Album/image-club.jpg" alt="Album Image 2">
+                </div>
+
+                <div class="item-3">
+                    <img src="./img/Album/img.jpg" alt="Album Image 3">
+                </div>
+
+                <div class="item-4">
+                    <img src="./img/Album/img2.jpg" alt="Album Image 4">
+                </div>
+            </div>
+            <a href="#" class="cta-button">Voir toutes les photos</a>
+        </div>
+    </section>
+
+
+<!-- Footer -->
+
+    <footer class="footer">
+        <div class="footer-divider"></div>
+        
+        <div class="footer-content">
+            <div class="footer-grid">
+                <!-- Section Brand -->
+                <div class="footer-brand">
+                    <div class="footer-logo">
+                        <img src="./img/logo.png" alt="Logo Le Mans Elite">
+                        <h3>Le Mans Elite<br>Taekwondo</h3>
+                    </div>
+                    <p class="footer-description">
+                        placeholder
+                    </p>
+                </div>
+
+                <!-- Navigation -->
+                <div class="footer-section">
+                    <h4>Navigation</h4>
+                    <ul>
+                        <li><a href="./index.html">Accueil</a></li>
+                        <li><a href="./html/club.html">Le Club</a></li>
+                        <li><a href="./html/equipes.html">Nos Équipes</a></li>
+                        <li><a href="./html/horaires.html">Horaires</a></li>
+                        <li><a href="./html/actualites.html">Actualités</a></li>
+                        <li><a href="./html/inscriptions.html">Inscriptions</a></li>
+                    </ul>
+                </div>
+
+                <!-- Contact -->
+                <div class="footer-section">
+                    <h4>Contact</h4>
+                    <div class="contact-info">
+                        <i class="fa-phone"></i>
+                        <span>06 50 89 65 62</span>
+                    </div>
+                    <div class="contact-info">
+                        <i class="fa-envelope"></i>
+                        <span>placeholder@gmail.com</span>
+                    </div>
+                    <div class="contact-info">
+                        <i class="fa-map-marker"></i>
+                        <span>Le Mans, Sarthe</span>
+                    </div>
+                    <div class="contact-info">
+                        <i class="fa-clock"></i>
+                        <span>Lun-Ven: 18h-21h</span>
+                    </div>
+                </div>
+
+                <!-- Newsletter -->
+                <div class="footer-section">
+                    <h4>Newsletter</h4>
+                    <p style="color: #cccccc; margin-bottom: 20px; font-size: 0.95rem;">
+                        Restez informé de nos actualités, compétitions et événements.
+                    </p>
+                    <form class="newsletter-form">
+                        <input type="email" class="newsletter-input" placeholder="Votre email..." required>
+                        <button type="submit" class="newsletter-btn">S'abonner</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+
+        <div class="footer-bottom">
+            <p>&copy; 2025 Le Mans Elite Taekwondo. Tous droits réservés.</p>
+            <div class="footer-links">
+                <a href="#">Mentions légales</a>
+                <a href="#">Politique de confidentialité</a>
+                <a href="#">CGU</a>
+                <a href="#">Plan du site</a>
+            </div>
+        </div>
+
+    </footer>
 
 </body>
 </html>
